hphp/hack/test/full_fidelity/cases/test_errors_statements.php
<?hh // strict
function foo() : void {
  fallthrough; // error
}
